# stack-lifecycle

./: .gitignore  AGENTS.md  NOTICE  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
src/stack_lifecycle/: build_docker.py  context_sha.py  detect_gpu.py  down.py  modes.py  up.py
tests/: test_context_sha.py
